Implemented from template

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,6 @@
 @import "tailwindcss";
+@import "./theme.css";
+@import "./layout.css";
 @plugin "tailwindcss-motion";
 @variant dark (&:where([data-theme="dark"] *));
 
